# myporfolio

./: .gitignore  README.md
admin-frontend/: package-lock.json  package.json
admin-frontend/src/: App.jsx  api.js
admin-frontend/src/components/: Layout.jsx  ProtectedRoute.jsx  Sidebar.jsx
admin-frontend/src/context/: AuthContext.jsx
admin-frontend/src/pages/: AboutPage.jsx  AchievementsPage.jsx  ContactPage.jsx  Dashboard.jsx  ExperiencePage.jsx  Login.jsx  ProjectsPage.jsx  ReadingsPage.jsx  ResearchPage.jsx  SkillsPage.jsx  SocialLinksPage.jsx
backend/: .env  .env.example  Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: auth.rs  db.rs  email.rs  main.rs
backend/src/models/: about.rs  achievements.rs  contact.rs  experience.rs  mod.rs  myreadings.rs  project.rs  research.rs  skill.rs  social_link.rs
backend/src/routes/: about.rs  achievements.rs  auth_routes.rs  chat.rs  contact.rs  experience.rs  health.rs  mod.rs  myreadings.rs  projects.rs  research.rs  skills.rs  social_links.rs
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: resume.pdf:Zone.Identifier  robots.txt  sitemap.xml
frontend/src/: App.jsx  api.js
frontend/src/components/: About.jsx  Contact.jsx  Experience.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Projects.jsx  Skills.jsx
frontend/src/pages/: CredentialsPage.jsx  ExperiencePage.jsx  HomePage.jsx  MyLabPage.jsx  PlaygroundPage.jsx  ProjectsPage.jsx  SkillsPage.jsx
