[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.11"
jsonwebtoken = "9"
bcrypt = "0.15"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }